--- a/.github/workflows/boussole_release.yml
+++ b/.github/workflows/boussole_release.yml
@@ -1,17 +1,15 @@
-name: Boussole - Auto Release (READY gate)
+name: Boussole — Auto Release (READY gate)
 
 on:
   workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
       - "NEXT_OBJECTIVE.md"
       - "VERSION.txt"
+      - "CHANGELOG.md"
       - ".github/workflows/boussole_release.yml"
       - "scripts/release.sh"
-  schedule:
-    - cron: "5 7 * * *"
-    - cron: "5 8 * * *"
 
 permissions:
   contents: write
@@ -22,40 +20,61 @@ concurrency:
 
 jobs:
   release:
+    # évite la boucle quand le bot commit VERSION/CHANGELOG/READY reset
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup git identity
+      - name: Packaging (READY gate)
+        id: pack
+        shell: bash
         run: |
-          git config user.name "boussole-bot"
-          git config user.email "boussole-bot@users.noreply.github.com"
+          bash scripts/release.sh
 
-      - name: Run release (READY gate)
-        id: rel
+      - name: Stop (READY != yes)
+        if: steps.pack.outputs.released != 'yes'
+        run: echo "READY != yes → rien à faire."
+
+      - name: Commit + push release changes
+        if: steps.pack.outputs.released == 'yes'
+        shell: bash
         run: |
-          chmod +x scripts/release.sh
-          scripts/release.sh
-          echo "did_release=$(cat dist/.did_release 2>/dev/null || echo no)" >> "$GITHUB_OUTPUT"
-          echo "zip_path=$(cat dist/.zip_path 2>/dev/null || echo "")" >> "$GITHUB_OUTPUT"
-          echo "tag=$(cat dist/.tag 2>/dev/null || echo "")" >> "$GITHUB_OUTPUT"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      - name: Upload ZIP artifact
-        if: steps.rel.outputs.did_release == 'yes'
+          git add -A
+          if git diff --cached --quiet; then
+            echo "Aucun changement à committer."
+          else
+            git commit -m "chore(release): v${{ steps.pack.outputs.version }}"
+            git push
+          fi
+
+      - name: Tag
+        if: steps.pack.outputs.released == 'yes'
+        shell: bash
+        run: |
+          git tag "v${{ steps.pack.outputs.version }}"
+          git push origin "v${{ steps.pack.outputs.version }}"
+
+      - name: Upload artifact (ZIP)
+        if: steps.pack.outputs.released == 'yes'
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.rel.outputs.tag }}
-          path: ${{ steps.rel.outputs.zip_path }}
+          name: boussole-v${{ steps.pack.outputs.version }}-full
+          path: ${{ steps.pack.outputs.zip_path }}
           if-no-files-found: error
 
-      - name: Create GitHub Release
-        if: steps.rel.outputs.did_release == 'yes'
+      - name: Create GitHub Release + attach ZIP
+        if: steps.pack.outputs.released == 'yes'
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ steps.rel.outputs.tag }}
-          name: ${{ steps.rel.outputs.tag }}
-          body_path: dist/RELEASE_NOTES.md
-          files: ${{ steps.rel.outputs.zip_path }}
+          tag_name: v${{ steps.pack.outputs.version }}
+          name: Boussole v${{ steps.pack.outputs.version }}
+          body_path: ${{ steps.pack.outputs.release_notes_path }}
+          files: ${{ steps.pack.outputs.zip_path }}
