--- a/.github/workflows/boussole_release.yml
+++ b/.github/workflows/boussole_release.yml
@@ -40,20 +40,22 @@ jobs:
         if: steps.pack.outputs.released != 'yes'
         run: echo "READY != yes → rien à faire."
 
-      - name: Commit + push release changes
-        if: steps.pack.outputs.released == 'yes'
-        shell: bash
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+git config user.name "github-actions[bot]"
+git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          git add -A
-          if git diff --cached --quiet; then
-            echo "Aucun changement à committer."
-          else
-            git commit -m "chore(release): v${{ steps.pack.outputs.version }}"
-            git push
-          fi
+git add -A
+
+# Ne jamais committer dist/ (ZIP + notes), uniquement artifact + Release
+git restore --staged dist || true
+git restore --staged dist/* || true
+
+if git diff --cached --quiet; then
+  echo "Aucun changement à committer."
+else
+  git commit -m "chore(release): v${{ steps.pack.outputs.version }}"
+  git push
+fi
+
 
       - name: Tag
         if: steps.pack.outputs.released == 'yes'
