--- a/.github/workflows/boussole_deploy.yml
+++ b/.github/workflows/boussole_deploy.yml
@@ -14,12 +14,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout (for metadata only)
+      - name: Checkout (metadata only)
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
-      - name: Find latest release asset (ZIP full)
+      - name: Get latest release asset URL (*-full.zip)
         id: asset
         shell: bash
         env:
@@ -27,22 +27,22 @@ jobs:
         run: |
           set -euo pipefail
           REPO="${{ github.repository }}"
-          # Get latest published release
-          URL="https://api.github.com/repos/${REPO}/releases/latest"
-          JSON="$(curl -sSf -H "Authorization: Bearer ${GH_TOKEN}" -H "X-GitHub-Api-Version: 2022-11-28" "${URL}")"
-          ASSET_URL="$(echo "$JSON" | python3 - <<'PY'
-import json,sys
-data=json.load(sys.stdin)
+          API="https://api.github.com/repos/${REPO}/releases/latest"
+
+          JSON="$(curl -sSf \
+            -H "Authorization: Bearer ${GH_TOKEN}" \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "${API}")"
+
+          ASSET_URL="$(python3 -c 'import json,sys
+data=json.loads(sys.stdin.read())
 assets=data.get("assets",[])
-zip_assets=[a for a in assets if a.get("name","").endswith("-full.zip")]
-if not zip_assets:
-  raise SystemExit("No *-full.zip asset found on latest release")
-# pick the first (there should be one)
-a=zip_assets[0]
-print(a["browser_download_url"])
-PY
-)"
-          echo "asset_url=$ASSET_URL" >> "$GITHUB_OUTPUT"
+z=[a for a in assets if a.get("name","").endswith("-full.zip")]
+assert z, "No *-full.zip asset found on latest release"
+print(z[0]["browser_download_url"])' <<<"$JSON")"
+
+          echo "asset_url=${ASSET_URL}" >> "$GITHUB_OUTPUT"
 
       - name: Download release ZIP
         shell: bash
@@ -58,7 +58,7 @@ PY
           mkdir -p _site
           unzip -q _pkg/boussole-full.zip -d _site
 
-      - name: Prepare deploy payload (exclude .git, workflows, scripts)
+      - name: Prepare deploy payload
         shell: bash
         run: |
           set -euo pipefail
